Update copyright year and name in footer

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -272,7 +272,7 @@
         </div>
       </div>
       <div class="main-footer flex-column flex-md-row text-center">
-        <p class="fs-5">Copyright &copy; 2023 Muhammad Mahfuj</p>
+        <p class="fs-5">Copyright &copy; 2025 Nafis Ahmed</p>
         <div class="pay-method">
           <div class="big-screen d-none d-md-flex">
             <img src="../../../images/visa.png" alt="" />
